--- a/index.html
+++ b/index.html
@@ -101,40 +101,40 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item py-3 px-2 active dropdown">
-                  <a class="nav-link dropdown-toggle" style="word-spacing: 4pt;" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" style="word-spacing: 4pt;" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <svg xmlns="http://www.w3.org/2000/svg"  style="fill: #92585a;" width="24" height="24" viewBox="0 0 24 24"><path d="M21.743,12.331l-9-10c-0.379-0.422-1.107-0.422-1.486,0l-9,10c-0.265,0.293-0.331,0.715-0.17,1.076	C2.247,13.768,2.605,14,3,14h2v7c0,0.552,0.447,1,1,1h3c0.553,0,1-0.448,1-1v-4h4v4c0,0.552,0.447,1,1,1h3c0.553,0,1-0.448,1-1v-7h2	c0.395,0,0.753-0.232,0.913-0.593C22.074,13.046,22.008,12.625,21.743,12.331z"/></svg>
                   INICIO
                   <span class="sr-only">(current)</span></a>
                   <div class="dropdown-menu gris01" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item gris02" href="#">Inicio</a>
-                    <a class="dropdown-item gris02" href="procedimientos/nosotros.html">Nosotros</a>
-                    <a class="dropdown-item gris02" href="procedimientos/documentos-academicos.html">Documentos Académicos</a>
-                    <a class="dropdown-item gris02" href="procedimientos/cronograma-academico.html">Cronograma Académico</a>
+                    <a class="dropdown-item gris02" href="procedimientos/nosotros">Nosotros</a>
+                    <a class="dropdown-item gris02" href="procedimientos/documentos-academicos">Documentos Académicos</a>
+                    <a class="dropdown-item gris02" href="procedimientos/cronograma-academico">Cronograma Académico</a>
                   </div>
                 </li>
                 <li class="nav-item p-3 px-2 ">
-                    <a class="nav-link " href="procedimientos/gestDocente.html">
+                    <a class="nav-link " href="procedimientos/gestDocente">
                       <svg xmlns="http://www.w3.org/2000/svg"  style="fill: #92585a;" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M12,20c-4.411,0-8-3.589-8-8s3.589-8,8-8 s8,3.589,8,8S16.411,20,12,20z"/><path d="M9.999 13.587L7.7 11.292 6.288 12.708 10.001 16.413 16.707 9.707 15.293 8.293z"/></svg>
                       <span>Gestión Docente</span> 
                     </a>
                 </li>
                 <li class="nav-item py-3 px-2">
-                    <a class="nav-link" href="procedimientos/gestCurricular.html">
+                    <a class="nav-link" href="procedimientos/gestCurricular">
                       <svg xmlns="http://www.w3.org/2000/svg"  style="fill: #92585a;" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M12,20c-4.411,0-8-3.589-8-8s3.589-8,8-8 s8,3.589,8,8S16.411,20,12,20z"/><path d="M9.999 13.587L7.7 11.292 6.288 12.708 10.001 16.413 16.707 9.707 15.293 8.293z"/></svg>
                        <span>Gestión Curricular</span> </a>
                 </li>
                 <li class="nav-item py-3 px-2">
-                    <a class="nav-link " href="procedimientos/GestMatricula.html">
+                    <a class="nav-link " href="procedimientos/GestMatricula">
                       <svg xmlns="http://www.w3.org/2000/svg"  style="fill: #92585a;" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M12,20c-4.411,0-8-3.589-8-8s3.589-8,8-8 s8,3.589,8,8S16.411,20,12,20z"/><path d="M9.999 13.587L7.7 11.292 6.288 12.708 10.001 16.413 16.707 9.707 15.293 8.293z"/></svg>
                       Gestión Matricula</a>
                 </li>
                 <li class="nav-item py-3 px-2">
-                    <a class="nav-link " href="procedimientos/gestRegistroNotas.html">
+                    <a class="nav-link " href="procedimientos/gestRegistroNotas">
                       <svg xmlns="http://www.w3.org/2000/svg"  style="fill: #92585a;" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M12,20c-4.411,0-8-3.589-8-8s3.589-8,8-8 s8,3.589,8,8S16.411,20,12,20z"/><path d="M9.999 13.587L7.7 11.292 6.288 12.708 10.001 16.413 16.707 9.707 15.293 8.293z"/></svg>
                       Gestión Registro de Notas</a>
                 </li>
                 <li class="nav-item py-3 px-2 ">
-                    <a class="nav-link" href="procedimientos/gestCertificaciones.html">
+                    <a class="nav-link" href="procedimientos/gestCertificaciones">
                       <svg xmlns="http://www.w3.org/2000/svg"  style="fill: #92585a;" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M12,20c-4.411,0-8-3.589-8-8s3.589-8,8-8 s8,3.589,8,8S16.411,20,12,20z"/><path d="M9.999 13.587L7.7 11.292 6.288 12.708 10.001 16.413 16.707 9.707 15.293 8.293z"/></svg>
                       Gestión Certificaciones</a>
                 </li>
@@ -144,7 +144,7 @@
                     Consultas
                   </a>
                   <div class="dropdown-menu gris01" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item gris02"  href="procedimientos/consultas.html">Preguntas Frecuentes</a>
+                    <a class="dropdown-item gris02"  href="procedimientos/consultas">Preguntas Frecuentes</a>
                     
                   </div>
                 </li>
@@ -269,7 +269,7 @@
           <p>
             <img src="images/website.png" alt="" />
             <span class="fnt-peq">SITIO WEB</span><br />
-              http://dufa.unsa.edu.pe
+              http://vra.unsa.edu.pe/dufa
           </p>
           <p>
             <img src="images/email.png" alt="" />
