--- a/procedimientos/organizacion.html
+++ b/procedimientos/organizacion.html
@@ -103,35 +103,35 @@
                   INICIO
                   <span class="sr-only">(current)</span></a>
                   <div class="dropdown-menu gris01" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item gris02" href="../index.html">Inicio</a>
-                    <a class="dropdown-item gris02" href="./nosotros.html">Nosotros</a>
-                    <a class="dropdown-item gris02" href="./documentos-academicos.html">Documentos Académicos</a>
-                    <a class="dropdown-item gris02" href="./cronograma-academico.html">Cronograma Académico</a>
+                    <a class="dropdown-item gris02" href="http://vra.unsa.edu.pe/dufa">Inicio</a>
+                    <a class="dropdown-item gris02" href="./nosotros">Nosotros</a>
+                    <a class="dropdown-item gris02" href="./documentos-academicos">Documentos Académicos</a>
+                    <a class="dropdown-item gris02" href="./cronograma-academico">Cronograma Académico</a>
                   </div>
                 </li>
                 <li class="nav-item p-3 px-2 ">
-                    <a class="nav-link " href="./gestDocente.html">
+                    <a class="nav-link " href="./gestDocente">
                       <svg xmlns="http://www.w3.org/2000/svg"  style="fill: #92585a;" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M12,20c-4.411,0-8-3.589-8-8s3.589-8,8-8 s8,3.589,8,8S16.411,20,12,20z"/><path d="M9.999 13.587L7.7 11.292 6.288 12.708 10.001 16.413 16.707 9.707 15.293 8.293z"/></svg>
                       <span>Gestión Docente</span> 
                     </a>
                 </li>
                 <li class="nav-item py-3 px-2">
-                    <a class="nav-link" href="./gestCurricular.html">
+                    <a class="nav-link" href="./gestCurricular">
                       <svg xmlns="http://www.w3.org/2000/svg"  style="fill: #92585a;" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M12,20c-4.411,0-8-3.589-8-8s3.589-8,8-8 s8,3.589,8,8S16.411,20,12,20z"/><path d="M9.999 13.587L7.7 11.292 6.288 12.708 10.001 16.413 16.707 9.707 15.293 8.293z"/></svg>
                        <span>Gestión Curricular</span> </a>
                 </li>
                 <li class="nav-item py-3 px-2">
-                    <a class="nav-link " href="./GestMatricula.html">
+                    <a class="nav-link " href="./GestMatricula">
                       <svg xmlns="http://www.w3.org/2000/svg"  style="fill: #92585a;" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M12,20c-4.411,0-8-3.589-8-8s3.589-8,8-8 s8,3.589,8,8S16.411,20,12,20z"/><path d="M9.999 13.587L7.7 11.292 6.288 12.708 10.001 16.413 16.707 9.707 15.293 8.293z"/></svg>
                       Gestión Matricula</a>
                 </li>
                 <li class="nav-item py-3 px-2">
-                    <a class="nav-link " href="./gestRegistroNotas.html">
+                    <a class="nav-link " href="./gestRegistroNotas">
                       <svg xmlns="http://www.w3.org/2000/svg"  style="fill: #92585a;" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M12,20c-4.411,0-8-3.589-8-8s3.589-8,8-8 s8,3.589,8,8S16.411,20,12,20z"/><path d="M9.999 13.587L7.7 11.292 6.288 12.708 10.001 16.413 16.707 9.707 15.293 8.293z"/></svg>
                       Gestión Registro de Notas</a>
                 </li>
                 <li class="nav-item py-3 px-2 ">
-                    <a class="nav-link" href="./gestCertificaciones.html">
+                    <a class="nav-link" href="./gestCertificaciones">
                       <svg xmlns="http://www.w3.org/2000/svg"  style="fill: #92585a;" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M12,20c-4.411,0-8-3.589-8-8s3.589-8,8-8 s8,3.589,8,8S16.411,20,12,20z"/><path d="M9.999 13.587L7.7 11.292 6.288 12.708 10.001 16.413 16.707 9.707 15.293 8.293z"/></svg>
                       Gestión Certificaciones</a>
                 </li>
@@ -141,7 +141,7 @@
                     Consultas
                   </a>
                   <div class="dropdown-menu gris01" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item gris02" href="./consultas.html">Preguntas Frecuentes</a>
+                    <a class="dropdown-item gris02" href="./consultas">Preguntas Frecuentes</a>
                     
                   </div>
                 </li>
@@ -277,12 +277,12 @@
             <div class="col-12 col-md-3">
                 <div class="wd-men-pag menu-nosotros">
                     <h2>Nosotros</h2>
-                    <ul class="list-unstyled grisb01 img-rounded fnt-10"><li id="menu-item-621" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-621"><a href="./nosotros.html#resena-historica">Reseña Histórica</a></li>
+                    <ul class="list-unstyled grisb01 img-rounded fnt-10"><li id="menu-item-621" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-621"><a href="./nosotros#resena-historica">Reseña Histórica</a></li>
                       <li id="menu-item-514" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-514"><a href="#">Organización</a></li>
-                      <li id="menu-item-619" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-619"><a href="./nosotros.html#mision">Misión</a></li>
-                      <li id="menu-item-618" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-618"><a href="./nosotros.html#vision">Visión</a></li>
-                      <li id="menu-item-622" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-622"><a href="./nosotros.html#politica-calidad">Política de Calidad</a></li>
-                      <li id="menu-item-632" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-632"><a href="./nosotros.html#organigrama">Organigrama</a></li>
+                      <li id="menu-item-619" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-619"><a href="./nosotros#mision">Misión</a></li>
+                      <li id="menu-item-618" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-618"><a href="./nosotros#vision">Visión</a></li>
+                      <li id="menu-item-622" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-622"><a href="./nosotros#politica-calidad">Política de Calidad</a></li>
+                      <li id="menu-item-632" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-632"><a href="./nosotros#organigrama">Organigrama</a></li>
   
                   </ul>                                           
                 </div>
