agregando nuevo comunicado

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css" />
     <title>DUFA</title>
+     <!-- Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-18322441-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-18322441-1');
+    </script> -->
+    <!-- End Google Analytics -->
   </head>
   <body>
     <div id="fb-root"></div>
@@ -209,12 +220,12 @@
           <div class="col-12">
             <h3 class="title-section">COMUNICADOS</h3>
             <div class="row">
-              <div class="col-12 col-md-6 col-lg-6">
-                <img class="comunicado"  height="auto" width="600px" src="images/comunicado3.png" alt="">
+              <div class="col-12 col-md-6 col-lg-6 text-center">
+                <img class="comunicado zoom" height="auto" width="500px" src="images/comunicado4.png" alt="">
               </div>
               <div class="col-12 col-md-6 col-lg-6" style="overflow:hidden;" >
                 <a href="https://www.unsa.edu.pe/ingresantes-a-la-unsa-deben-regularizar-expedientes/">
-                  <img class="comunicado zoom" src="images/FLYER-WEB.jpg" alt="">
+                  <img class="comunicado" src="images/comunicado3.png" alt="">
                 </a>
               </div>
             </div>
