añadiendo doc acad y cronograma arriba

--- a/index.html
+++ b/index.html
@@ -86,8 +86,13 @@
          
         </div>
       </div>
+      <!-- CAJA-->
       <div class="row">
         <div class="col-12 caja">
+          <ul>
+            <li class="menu-sec "> <a href="procedimientos/documentos-academicos">Documentos <br> Académicos</a></li>
+            <li class="menu-sec act-academicas"><a href="procedimientos/cronograma-academico">Cronograma de Actividades Académicas 2020</a></li>
+          </ul>
         </div>
       </div>
       <!-- MENU -->
@@ -221,12 +226,10 @@
             <h3 class="title-section">COMUNICADOS</h3>
             <div class="row">
               <div class="col-12 col-md-6 col-lg-6 text-center">
-                <img class="comunicado zoom" height="auto" width="500px" src="images/comunicado4.png" alt="">
+                <img class="comunicado" height="auto" width="600px" src="images/Comunicado_004.png" alt="">
               </div>
               <div class="col-12 col-md-6 col-lg-6" style="overflow:hidden;" >
-                <a href="https://www.unsa.edu.pe/ingresantes-a-la-unsa-deben-regularizar-expedientes/">
-                  <img class="comunicado" src="images/comunicado3.png" alt="">
-                </a>
+                  <img class="comunicado" src="images/Comunicado_005.png" alt="">
               </div>
             </div>
           </div>
