--- a/procedimientos/documentos-academicos.html
+++ b/procedimientos/documentos-academicos.html
@@ -75,8 +75,14 @@
          
         </div>
       </div>
-      <div class="row">
-        <div class="col-12 caja"></div>
+       <!-- CAJA-->
+       <div class="row">
+        <div class="col-12 caja">
+          <ul>
+            <li class="menu-sec"> <a href="documentos-academicos">Documentos <br> Académicos</a></li>
+            <li class="menu-sec act-academicas"><a href="cronograma-academico">Cronograma de Actividades Académicas 2020</a></li>
+          </ul>
+        </div>
       </div>
       <!-- MENU -->
       <div class="row">
