cambiando reglamentos a doc academicos

--- a/procedimientos/documentos-academicos.html
+++ b/procedimientos/documentos-academicos.html
@@ -167,8 +167,8 @@
             </div>            
         </div>
         <h2 class="title-section">DOCUMENTOS ACADÉMICOS</h2>
-        <div class="row justify-content-center mb-5">
-          <div class="col-md-9 text-justify mb-5">
+        <div class="row justify-content-center">
+          <div class="col-md-9 text-justify">
             <table class="table table-bordered">
               <tbody>
                 <tr>
@@ -207,7 +207,35 @@
             </table>
           </div>
         </div>
+        <!-- REGLAMENTOS -->
+        <h2 class="title-section">REGLAMENTOS</h2>
+        <div class="row justify-content-center mb-5">
+          <div class="col-md-9 text-left mb-5">
+            <table class="table table-bordered">
+              <tbody>
+                <tr>
+                  <th>Archivos</th>
+                  <th></th>
+                </tr>
+                <tr>
+                  <td>REGLAMENTO PARA LA EVALUACIÓN DE LOS DOCENTES ORDINARIOS</td>
+                  <td>
+                    <a href="../formatos/REGLAMENTO ASCENSOS-MODIFICADO-18-07-2018.pdf" class="btn btn-default btn-xs" target="_blank">Ver o Descargar</a>
+                  </td>
+                </tr>
+                <!-- ........... -->
+                <tr>
+                  <td>REGLAMENTO DEL RÉGIMEN DISCIPLINARIO PARA LOS SERVIDORES DOCENTES</td>
+                  <td>
+                    <a href="../formatos/REGLAMENTO DEL RÉGIMEN DISCIPLINARIO PARA LOS SERVIDORES DOCENTES DE LA UNSA.pdf" class="btn btn-default btn-xs" target="_blank">Ver o Descargar</a>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
       </div>
+      
 
       <!-- FOOTER -->
       <div class="row footer">
