haciendo responsive el nuevo menu

--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                   INICIO
                   <span class="sr-only">(current)</span></a>
                   <div class="dropdown-menu gris01" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item gris02" href="#">Inicio</a>
+                    <a class="dropdown-item gris02" href="http://vra.unsa.edu.pe/dufa">Inicio</a>
                     <a class="dropdown-item gris02" href="procedimientos/nosotros">Nosotros</a>
-                    <a class="dropdown-item gris02" href="procedimientos/documentos-academicos">Documentos Académicos</a>
-                    <a class="dropdown-item gris02" href="procedimientos/cronograma-academico">Cronograma Académico</a>
+                    <a class="dropdown-item gris02 responsive-caja" href="procedimientos/documentos-academicos">Documentos Académicos</a>
+                    <a class="dropdown-item gris02 responsive-caja" href="procedimientos/cronograma-academico">Cronograma Académico</a>
                   </div>
                 </li>
                 <li class="nav-item p-3 px-2 ">
