--- a/procedimientos/nosotros.html
+++ b/procedimientos/nosotros.html
@@ -115,8 +115,8 @@
                   <div class="dropdown-menu gris01" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item gris02" href="http://vra.unsa.edu.pe/dufa">Inicio</a>
                     <a class="dropdown-item gris02" href="./nosotros">Nosotros</a>
-                    <a class="dropdown-item gris02" href="./documentos-academicos">Documentos Académicos</a>
-                    <a class="dropdown-item gris02" href="./cronograma-academico">Cronograma Académico</a>
+                    <a class="dropdown-item gris02 responsive-caja" href="./documentos-academicos">Documentos Académicos</a>
+                    <a class="dropdown-item gris02 responsive-caja" href="./cronograma-academico">Cronograma Académico</a>
                   </div>
                 </li>
                 <li class="nav-item p-3 px-2 ">
